# src/swagger-output.json
@@ -937,6 +937,55 @@
         ]
       }
     },
+    "/api/chapter/desc/getAll": {
+      "get": {
+        "tags": [
+          "Novel"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "Authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "novelId",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "startIndex",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "limitIndex",
+            "in": "query",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "Bearer": []
+          }
+        ]
+      }
+    },
     "/api/novel/charactor": {
       "post": {
         "tags": [
